--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 *.pyc
 *.swp
 config
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
