--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+docutils==0.12
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 requests==2.9.1
+statistics==1.0.3.5
 Werkzeug==0.11.5
